[gd_scene load_steps=35 format=2]

[ext_resource path="res://src/charas/player/player.gd" type="Script" id=1]
[ext_resource path="res://src/charas/player/p_states/idle_state.gd" type="Script" id=2]
[ext_resource path="res://src/util/trail.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/protos/characters.png" type="Texture" id=4]
[ext_resource path="res://src/charas/state_machine.gd" type="Script" id=5]
[ext_resource path="res://src/charas/player/p_states/move_state.gd" type="Script" id=6]
[ext_resource path="res://src/charas/player/p_states/jump_state.gd" type="Script" id=7]
[ext_resource path="res://src/charas/player/p_states/fall_state.gd" type="Script" id=8]
[ext_resource path="res://src/charas/player/p_states/dig_state.gd" type="Script" id=9]
[ext_resource path="res://src/charas/player/ap_states/steel_state.gd" type="Script" id=10]
[ext_resource path="res://src/charas/player/ap_states/iron_state.gd" type="Script" id=11]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.791367, 1 )
colors = PoolColorArray( 1, 0, 0, 0, 1, 0, 0, 0.745098, 1, 0, 0, 1 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 96, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 320, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 352, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 384, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 352, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 416, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 128, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 160, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 192, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 224, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 256, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 288, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Move",
"speed": 6.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": false,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "Slash",
"speed": 10.0
}, {
"frames": [ SubResource( 10 ), SubResource( 10 ), SubResource( 11 ), SubResource( 11 ), SubResource( 10 ) ],
"loop": false,
"name": "Punch",
"speed": 8.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ) ],
"loop": false,
"name": "Jump",
"speed": 10.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "Fall",
"speed": 10.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 16 ) ],
"loop": false,
"name": "Hurt",
"speed": 6.0
} ]

[sub_resource type="VisualShaderNodeColorUniform" id=19]
uniform_name = "ColorUniform"

[sub_resource type="VisualShader" id=20]
code = "shader_type canvas_item;
render_mode unshaded;

uniform vec4 ColorUniform : hint_color;



void vertex() {
// Output:0

}

void fragment() {
// ColorUniform:2
	vec3 n_out2p0 = ColorUniform.rgb;
	float n_out2p1 = ColorUniform.a;

// Output:0
	COLOR.rgb = n_out2p0;

}

void light() {
// Output:0

}
"
graph_offset = Vector2( -33.75, 112.125 )
mode = 1
flags/light_only = false
flags/unshaded = true
nodes/fragment/2/node = SubResource( 19 )
nodes/fragment/2/position = Vector2( 240, 140 )
nodes/fragment/connections = PoolIntArray( 2, 0, 0, 0 )

[sub_resource type="ShaderMaterial" id=21]
render_priority = 5
shader = SubResource( 20 )
shader_param/ColorUniform = Color( 0.701961, 0.176471, 0.176471, 1 )

[sub_resource type="SphereMesh" id=22]
radius = 3.0
height = 6.0
radial_segments = 32
rings = 16

[sub_resource type="CapsuleShape2D" id=23]
radius = 6.0
height = 10.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )
move_accel = 0.4
min_jump_height = 1.0
jump_duration = 0.4

[node name="Trail" parent="." instance=ExtResource( 3 )]
default_color = Color( 1, 0.0862745, 0.0862745, 1 )
gradient = SubResource( 1 )
joint_mode = 0

[node name="Body" type="Node2D" parent="."]

[node name="AnimSprite" type="AnimatedSprite" parent="Body"]
frames = SubResource( 18 )
animation = "Slash"
frame = 2
playing = true
offset = Vector2( -1, -5 )

[node name="DigGizmo" type="MeshInstance2D" parent="."]
material = SubResource( 21 )
mesh = SubResource( 22 )

[node name="CollShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 23 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
process_mode = 0
smoothing_enabled = true
smoothing_speed = 7.0
drag_margin_top = 0.1
drag_margin_bottom = 0.1
editor_draw_drag_margin = true

[node name="FootRays" type="Node2D" parent="."]

[node name="RayCast2DL" type="RayCast2D" parent="FootRays"]
position = Vector2( -4, 8 )
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 2

[node name="RayCast2DR" type="RayCast2D" parent="FootRays"]
position = Vector2( 4, 8 )
enabled = true
cast_to = Vector2( 0, 6 )
collision_mask = 2

[node name="DigRay" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 2

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Dig" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="AllomanticSM" type="Node" parent="."]
script = ExtResource( 5 )
initial_state = NodePath("Steel")

[node name="Steel" type="Node" parent="AllomanticSM"]
script = ExtResource( 10 )

[node name="Iron" type="Node" parent="AllomanticSM"]
script = ExtResource( 11 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -10.0
margin_top = -18.0
margin_right = 9.0
margin_bottom = -12.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI"]
margin_left = -7.0
margin_top = -7.0
margin_right = 26.0
margin_bottom = 7.0
text = "Steel"
